Center text and fix spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -13,7 +13,7 @@
     line-height: 95px;
     letter-spacing: 2px;
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 
     &,
     &:visited {
@@ -22,6 +22,10 @@
 }
 
 .site-title-wrapper {
+  text-align: center;
+}
+
+.home {
   text-align: center;
 }
 
@@ -56,9 +60,7 @@
 }
 
 .footer-col {
-    float: left;
-    margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
+    text-align: center;
 }
 
 @include media-query($on-laptop) {
@@ -82,9 +84,6 @@
 /**
  * Page content
  */
-.page-content {
-    padding: $spacing-unit 0;
-}
 
 .page-heading {
     font-size: 20px;
